tests/twist/bad_expression.rs
use tear::twist;

fn bad_expression() {
	twist! { 1 => }
}

fn main () {}